[package]
name = "sendbuild"
version = "0.1.3-beta"
edition = "2021"

[[bin]]
name = "sendbuilds"
path = "src/main.rs"

[dependencies]
clap    = { version = "4", features = ["derive"] }
anyhow  = "1"
serde   = { version = "1", features = ["derive"] }
serde_json = "1"
toml    = "0.8"
chrono  = "0.4"
colored    = "2"
thiserror  = "1"
sysinfo = "0.30"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
flate2 = "1"
tar = "0.4"
zip = "2"
getrandom = "0.2"
